--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "dependencies": {
+  "scripts": {
+    "generate": "node process.js",
+    "serve": "serve ."
+  },
+  "devDependencies": {
+    "serve": "^11.3.2",
     "sharp": "^0.27.0"
   }
 }
